# GlintMaskGenerator

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODEOWNERS  DEVELOPMENT.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  benchmark_caching.py  cli.py  constants.py  environment.yaml  environment.yml  glint_mask_RGB.py  gui.py  gui.ui  gui2.py  install.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  specular_mask.py  utils.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  gui_release.yml  lint.yaml  main.yml  pypi-publish.yml  pypi_release.yml  release-packaging.yml  release.yml  test.yml  test_code.yml
core/: AbstractBaseMasker.py  __init__.py  abstract_masker.py  bin_maskers.py  common.py  glint_mask.py  image_loaders.py  maskers.py  specular_mask.py  specular_maskers.py  threshold_maskers.py  utils.py
core/glint_mask_algorithms/: __init__.py  glint_mask.py  specular_mask.py
core2/: glint_algorithms.py  image_loaders.py  maskers.py
docs/: cli.md  faq.md  gui.md  how_it_works.md  index.md  installation.md  python-api.md  requirements.txt  usage.md
glint_mask_generator/: __init__.py  cli.py  glint_algorithms.py  image_loaders.py  maskers.py  utils.py
gui/: __main__.py  constants.py  main.py  utils.py
gui/resources/: gui.ui
gui/widgets/: __init__.py  buffer_ctrl.py  directory_path.py  threshold_ctrl.py
hooks/: hook-scipy.py
resources/: gui.ui  threshold_ctrl.ui
src/: gui.py
src/glint_mask_generator/: __init__.py  cli.py  image_loaders.py  maskers.py  sensors.py  utils.py
src/glint_mask_tools/: __init__.py  band_alignment.py  cli.py  glint_algorithms.py  image_loaders.py  maskers.py  sensors.py  utils.py
src/gui/: __main__.py  utils.py
src/gui/resources/: brutalist.qss  directory_path.ui  gui.ui  threshold_ctrl.ui
src/gui/widgets/: directory_path.py  threshold_ctrl.py
src/resources/: buffer_ctrl.ui  gui.ui  threshold_ctrl.ui
src/test/: test_image_loaders.py
src/widgets/: threshold_ctrl.py
test/: test_bin_maskers.py  test_common.py  test_image_loaders.py  test_specular_masker.py
tests/: __init__.py  test_band_alignment.py  test_image_loaders.py  test_masker_integration.py  test_threshold_maskers.py
widgets/: __init__.py  buffer_ctrl.py  directory_path.py  threshold_ctrl.py
