[tool.poetry]
name = "glint-mask-tools"
version = "0.0.0"
description = "Create masks for specular reflection in UAV and aerial imagery"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HakaiInstitute/GlintMaskGenerator"
packages = [
    { include = "glint_mask_generator" }
]

[tool.poetry.scripts]
glint-mask = 'glint_mask_generator.cli:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "~=1.25.1"
fire = "~=0.5.0"
Pillow = "~=10.4"
scipy = "~=1.11.1"
tqdm = "~=4.65"
loguru = "~=0.7.0"
pyqt6 = "^6.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyinstaller = "^5.6.2"
pre-commit = "^3.3.3"
ruff = "^0.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
mkdocstrings-python = "^1.12.2"

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
